--- a/templates/dashboard/project_selection.html
+++ b/templates/dashboard/project_selection.html
@@ -58,29 +58,11 @@
                         </h5>
                     </div>
                     <div class="card-body">
-                        <div class="row">
-                            <div class="col-md-3 mb-2">
-                                <a href="{% url 'projects:create' %}" class="btn btn-outline-primary w-100">
-                                    <i class="bi bi-plus-circle me-2"></i>
-                                    New Project
-                                </a>
-                            </div>
-                            <div class="col-md-3 mb-2">
-                                <a href="{% url 'projects:list' %}" class="btn btn-outline-secondary w-100">
-                                    <i class="bi bi-list-ul me-2"></i>
-                                    All Projects
-                                </a>
-                            </div>
-                            <div class="col-md-3 mb-2">
-                                <a href="#" class="btn btn-outline-success w-100">
-                                    <i class="bi bi-download me-2"></i>
-                                    Export Data
-                                </a>
-                            </div>
-                            <div class="col-md-3 mb-2">
-                                <a href="#" class="btn btn-outline-info w-100">
+                        <div class="row justify-content-center">
+                            <div class="col-md-4 mb-2">
+                                <a href="#" class="btn btn-outline-info w-100" onclick="scrollToAnalytics()">
                                     <i class="bi bi-graph-up me-2"></i>
-                                    Analytics
+                                    View Analytics
                                 </a>
                             </div>
                         </div>
@@ -642,6 +624,14 @@ document.addEventListener('DOMContentLoaded', function() {
         });
     }
 });
+
+// Scroll to analytics section
+function scrollToAnalytics() {
+    document.querySelector('.row.mt-4').scrollIntoView({ 
+        behavior: 'smooth',
+        block: 'start'
+    });
+}
 </script>
 {% endblock %}
 {% endblock %}
